--- a/src/css/findPassword.css
+++ b/src/css/findPassword.css
@@ -3,7 +3,7 @@ ul, ol, li{list-style:none;}
 a{text-decoration:none;} 
 
 .findPassword {
-  background-color: #f6f1eb;
+  background-color: #FFFFFF;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -13,14 +13,14 @@ a{text-decoration:none;}
 }
 
 .findPassword .div {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 524px;
   position: relative;
   width: 640px;
   border-radius: 10px;
 }
 
-.findPassword .div > .textWrapper::after{
+/* .findPassword .div > .textWrapper::after{
   content: '';
   display: block;
   width: 540px;
@@ -28,11 +28,10 @@ a{text-decoration:none;}
   position: absolute;
   top: 60px;
   left: 115px;
-}
+} */
 
 .findPassword .textWrapper {
-  color: #524747;
-  
+  color: black;
   font-size: 30px;
   font-weight: 400;
   height: 95px;
@@ -41,12 +40,12 @@ a{text-decoration:none;}
   position: absolute;
   text-align: center;
   top: 20px;
-  left: -70px;
+  left: 100px;
   width: 413px;
 }
 
 .findPassword .findPasswordBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 373px;
   left: 0px;
   position: absolute;
@@ -55,7 +54,7 @@ a{text-decoration:none;}
 }
 
 .findPassword .inputBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 178px;
   left: 110px;
   position: absolute;
@@ -67,7 +66,7 @@ a{text-decoration:none;}
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 104px;
+  left: 90px;
   width: 50px;
   text-align: center;
   background-color: white;
@@ -82,7 +81,7 @@ a{text-decoration:none;}
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 103px;
+  left: 85px;
   width: 60px;
   text-align: center;
   background-color: white;
@@ -97,7 +96,7 @@ a{text-decoration:none;}
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 103px;
+  left: 89px;
   width: 60px;
   text-align: center;
   background-color: white;
@@ -109,7 +108,7 @@ a{text-decoration:none;}
 }
 
 .findPassword .inputUserid {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 90px;
   left: -70px;
   position: absolute;
@@ -119,7 +118,6 @@ a{text-decoration:none;}
 
 .findPassword .textWrapper2 {
   color: #000000;
-  
   font-size: 15px;
   font-weight: 400;
   height: 40px;
@@ -130,13 +128,18 @@ a{text-decoration:none;}
   text-align: left;
   top: 15px;
   width: 370px;
-  border: 1px solid #9d2a1e;
   padding-left: 7px;
-  border-radius: 4px;
+  border: transparent;
+  border-bottom: 1px solid #EBEBEB;
+  outline: none;
+}
+.findPassword .textWrapper2:focus{
+  border-bottom: 1px solid rgb(124, 124, 124);
 }
 
+
 .findPassword .inputUserEmail {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 70px;
   left: -70px;
   position: absolute;
@@ -155,17 +158,21 @@ a{text-decoration:none;}
   position: absolute;
   text-align: left;
   top: 15px;
-  width: 370px;
-  border: 1px solid #9d2a1e;
+  width: 285px;
   padding-left: 7px;
-  border-radius: 4px;
+  border: transparent;
+  border-bottom: 1px solid #EBEBEB;
+  outline: none;
+}
+.findPassword .textWrapper3:focus{
+  border-bottom: 1px solid rgb(124, 124, 124);
 }
 
 .findPassword .emailButton {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   position: absolute;
   top: 15px;
@@ -178,7 +185,7 @@ a{text-decoration:none;}
 }
 
 .findPassword .inputNum {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 90px;
   left: -70px;
   position: absolute;
@@ -188,7 +195,6 @@ a{text-decoration:none;}
 
 .findPassword .inputNumWrapper {
   color: #000000;
-  
   font-size: 15px;
   font-weight: 400;
   height: 40px;
@@ -198,17 +204,21 @@ a{text-decoration:none;}
   position: absolute;
   text-align: left;
   top: 15px;
-  width: 370px;
-  border: 1px solid #9d2a1e;
+  width: 285px;
   padding-left: 7px;
-  border-radius: 4px;
+  border: transparent;
+  border-bottom: 1px solid #EBEBEB;
+  outline: none;
+}
+.findPassword .inputNumWrapper:focus{
+  border-bottom: 1px solid rgb(124, 124, 124);
 }
 
 .findPassword .inputNumButton {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   position: absolute;
   top: 15px;
@@ -221,7 +231,7 @@ a{text-decoration:none;}
 }
 
 .findPassword .buttonBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 154px;
   left: 10px;
   position: absolute;
@@ -233,7 +243,7 @@ a{text-decoration:none;}
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   position: absolute;
   top: 28px;
@@ -251,7 +261,7 @@ a{text-decoration:none;}
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   left: 350px;
   position: absolute;
