--- a/src/css/passwordCheck.css
+++ b/src/css/passwordCheck.css
@@ -3,7 +3,7 @@ ul, ol, li{list-style:none;}
 a{text-decoration:none;} 
 
 .passwordCheck {
-  background-color: #f6f1eb;
+  background-color: #FFFFFF;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -13,14 +13,14 @@ a{text-decoration:none;}
 }
 
 .passwordCheck .div {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 524px;
   position: relative;
   width: 640px;
   border-radius: 10px;
 }
 
-.passwordCheck .div > .textWrapper::after{
+/* .passwordCheck .div > .textWrapper::after{
   content: '';
   display: block;
   width: 540px;
@@ -28,11 +28,10 @@ a{text-decoration:none;}
   position: absolute;
   top: 60px;
   left: 120px;
-}
+} */
 
 .passwordCheck .textWrapper {
-  color: #524747;
-  
+  color: black;
   font-size: 30px;
   font-weight: 400;
   height: 95px;
@@ -41,12 +40,12 @@ a{text-decoration:none;}
   position: absolute;
   text-align: center;
   top: 20px;
-  left: -70px;
+  left: 100px;
   width: 413px;
 }
 
 .passwordCheck .loginBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 373px;
   left: 0px;
   position: absolute;
@@ -58,7 +57,7 @@ a{text-decoration:none;}
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 100px;
+  left: 93px;
   width: 60px;
   text-align: center;
   background-color: white;
@@ -73,7 +72,7 @@ a{text-decoration:none;}
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 103px;
+  left: 95px;
   width: 80px;
   text-align: center;
   background-color: white;
@@ -85,7 +84,7 @@ a{text-decoration:none;}
 }
 
 .passwordCheck .buttonBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 154px;
   left: 10px;
   position: absolute;
@@ -94,7 +93,7 @@ a{text-decoration:none;}
 }
 
 .passwordCheck .submitButton {
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   left: 150px;
   position: absolute;
@@ -109,7 +108,7 @@ a{text-decoration:none;}
 
 
 .passwordCheck .cancelButton {
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   left: 350px;
   position: absolute;
@@ -124,7 +123,7 @@ a{text-decoration:none;}
 
 
 .passwordCheck .inputBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 178px;
   left: 110px;
   position: absolute;
@@ -133,7 +132,7 @@ a{text-decoration:none;}
 }
 
 .passwordCheck .inputUserpassword {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 90px;
   left: -70px;
   position: absolute;
@@ -143,7 +142,6 @@ a{text-decoration:none;}
 
 .passwordCheck .textWrapper4 {
   color: #000000;
-  
   font-size: 15px;
   font-weight: 400;
   height: 40px;
@@ -154,13 +152,18 @@ a{text-decoration:none;}
   text-align: left;
   top: 15px;
   width: 370px;
-  border: 1px solid #9d2a1e;
+  border: transparent;
   padding-left: 7px;
-  border-radius: 4px;
+  border-bottom: 1px solid #EBEBEB;
+  outline: none;
+}
+.passwordCheck .textWrapper4:focus{
+  border-bottom: 1px solid rgb(124, 124, 124);
 }
 
+
 .passwordCheck .divWrapper {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 70px;
   left: -70px;
   position: absolute;
