--- a/src/css/join.css
+++ b/src/css/join.css
@@ -13,7 +13,7 @@ a {
 }
 
 .join {
-  background-color: #f6f1eb;
+  background-color: #FFFFFF;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -23,14 +23,14 @@ a {
 }
 
 .join .joinBoxWrapper {
-  background-color: #f6f1eb;
+  background-color: #FFFFFF;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .join .joinBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 1000px;
   width: 574px;
   position: relative;
@@ -53,15 +53,15 @@ a {
   font-size: 12px;
 }
 
-.join .textWrapper::after {
+/* .join .textWrapper::after {
   content: "";
   display: block;
   margin-top: 15px;
   width: 100%;
   height: 2px;
-  background-color: #f6f1eb;
+  background-color: #EBEBEB;
   text-align: center;
-}
+} */
 
 .join .boxWrapper {
   height: 90px;
@@ -75,7 +75,7 @@ a {
   height: 40px;
   text-align: left;
   width: 350px;
-  border: 1px solid #9d2a1e;
+  border: 1px solid #EBEBEB;
   padding-left: 10px;
   border-radius: 4px;
 }
@@ -88,7 +88,7 @@ a {
   height: 40px;
   text-align: left;
   width: 112px;
-  border: 1px solid #9d2a1e;
+  border: 1px solid #EBEBEB;
   padding-left: 10px;
   border-radius: 4px;
 }
@@ -117,7 +117,7 @@ a {
 }
 
 .join .btn-info{
-  background-color: #4d4a4a;
+  background-color: black;
   border:  transparent;
 }
 
@@ -126,7 +126,7 @@ a {
   left: 110px;
   height: 46px;
   text-align: center;
-  border: 1px solid #9d2a1e;
+  border: 1px solid #EBEBEB;
   border-radius: 4px;
   background-color: #ffffff;
   font-size: 15px;
@@ -166,7 +166,7 @@ a {
 }
 
 .join .submitButton {
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   /* left: 150px;
   position: absolute;
@@ -179,7 +179,7 @@ a {
 }
 
 .join .cancelButton {
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   /* left: 350px;
   position: absolute;
