--- a/src/css/login.css
+++ b/src/css/login.css
@@ -3,17 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 }
-ul,
-ol,
-li {
+ul,ol,li {
   list-style: none;
 }
+
 a {
   text-decoration: none;
 }
 
+
 .login {
-  background-color: #f6f1eb;
+  background-color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -23,25 +23,39 @@ a {
 }
 
 .login .div {
-  background-color: #fffcf7;
+  background-color: #ffffff;
   height: 524px;
   position: relative;
   width: 640px;
   border-radius: 10px;
 }
-.login .div > .textWrapper::after {
+
+/* .login .div > .textWrapper::after {
+  content: "";
+  display: block;
+  width: 350px;
+  border: 1px solid #EBEBEB;
+  position: absolute;
+  top: 60px;
+  left: 35px;
+} */
+
+/*
+.login .div > .textWrapper::before {
   content: "";
   display: block;
   width: 540px;
-  border: 1px solid #f6f1eb;
+  border: 1px solid #EBEBEB;
   position: absolute;
-  top: 60px;
-  left: 170px;
-}
+  top: 390px;
+  left: -50px;
+  z-index: 2;
+} */
+
+
 
 .login .textWrapper {
-  color: #524747;
-
+  color: black;
   font-size: 30px;
   font-weight: 400;
   height: 95px;
@@ -50,12 +64,12 @@ a {
   position: absolute;
   text-align: center;
   top: 20px;
-  left: -120px;
+  left: 100px;
   width: 413px;
 }
 
 .login .loginBox {
-  background-color: #fffcf7;
+  background-color: #ffffff;
   height: 373px;
   left: 0px;
   position: absolute;
@@ -63,8 +77,30 @@ a {
   width: 408px;
 }
 
+/* .login .loginBox::after {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 330px;
+  border: 1px solid #EBEBEB;
+  position: absolute;
+  top: -20px;
+  left: 50px;
+}
+
+.login .loginBox::before {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 330px;
+  border: 1px solid #EBEBEB;
+  position: absolute;
+  top: -20px;
+  left: 590px;
+} */
+
 .login .loginForm {
-  background-color: #fffcf7;
+  background-color: #ffffff;
   height: 178px;
   left: 110px;
   position: absolute;
@@ -73,7 +109,7 @@ a {
 }
 
 .login .inputUserId {
-  background-color: #fffcf7;
+  background-color: #ffffff;
   height: 90px;
   left: -70px;
   position: absolute;
@@ -85,7 +121,7 @@ a {
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 100px;
+  left: 90px;
   width: 50px;
   text-align: center;
   background-color: white;
@@ -100,7 +136,7 @@ a {
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 103px;
+  left: 90px;
   width: 60px;
   text-align: center;
   background-color: white;
@@ -113,7 +149,6 @@ a {
 
 .login .textWrapper2 {
   color: #000000;
-
   font-size: 15px;
   font-weight: 400;
   height: 40px;
@@ -124,13 +159,19 @@ a {
   text-align: left;
   top: 15px;
   width: 370px;
-  border: 1px solid #9d2a1e;
+  border: transparent;
+  border-bottom: 1px solid #EBEBEB;
   padding-left: 7px;
-  border-radius: 4px;
+  outline: none
+}
+
+.login .textWrapper2:focus{
+  border: transparent;
+  border-bottom: 1px solid rgb(124, 124, 124);
 }
 
 .login .inputUserpassword {
-  background-color: #fffcf7;
+  background-color: #ffffff;
   height: 70px;
   left: -70px;
   position: absolute;
@@ -139,16 +180,16 @@ a {
 }
 
 .login .loginButton {
-  background-color: #fffcf7;
+  background-color: #ffffff;
   height: 154px;
   left: 10px;
   position: absolute;
-  top: 200px;
+  top: 300px;
   width: 400px;
 }
 
 .login .submitButton {
-  background-color: #4d4a4a;
+  background-color: #000000;
   height: 40px;
   left: 150px;
   position: absolute;
@@ -175,7 +216,7 @@ a {
 }
 
 .login .cancelButton {
-  background-color: #4d4a4a;
+  background-color: #000000;
   height: 40px;
   left: 350px;
   position: absolute;
@@ -202,21 +243,20 @@ a {
 }
 
 .login .etc {
-  background-color: #fffcf7;
+  background-color: #ffffff;
   height: 54px;
   left: 10px;
   position: absolute;
-  top: 354px;
+  top: 230px;
   width: 400px;
 }
 
 .login .textWrapper5 {
-  color: #000000;
-
-  font-size: 12px;
+  color: black;
+  font-size: 15px;
   font-weight: 400;
   height: 37px;
-  left: 58px;
+  left: 120px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -229,11 +269,11 @@ a {
   content: "";
   display: block;
   width: 1px;
-  height: 60%;
-  background-color: #000000;
+  height: 50%;
+  background-color: #dadada;
   position: absolute;
-  top: 0px;
-  left: 150px;
+  top: 2px;
+  left: 120px
 }
 
 .login .etc :last-of-type::after {
@@ -241,12 +281,11 @@ a {
 }
 
 .login .textWrapper6 {
-  color: #000000;
-
-  font-size: 12px;
+  color: black;
+  font-size: 15px;
   font-weight: 400;
   height: 35px;
-  left: 250px;
+  left: 267px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -256,12 +295,12 @@ a {
 }
 
 .login .textWrapper7 {
-  color: #000000;
+  color: black;
 
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 400;
   height: 37px;
-  left: 446px;
+  left: 400px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
