--- a/src/css/userInfo.css
+++ b/src/css/userInfo.css
@@ -10,6 +10,7 @@ a{text-decoration:none;}
   align-items: center;
   width: 100%;
   height: 100vh;
+  min-height: 950px;
 }
 
 .userInfo .overlapGroupWrapper {
