--- a/src/css/join.css
+++ b/src/css/join.css
@@ -20,6 +20,7 @@ a {
   align-items: center;
   width: 100%;
   height: 100vh;
+  min-height: 1022px;
 }
 
 .join .joinBoxWrapper {
@@ -31,7 +32,7 @@ a {
 
 .join .joinBox {
   background-color: #fffcf7;
-  height: 1000px;
+  height: 1022px;
   width: 574px;
   position: relative;
 }
