--- a/src/css/joinUs.css
+++ b/src/css/joinUs.css
@@ -18,6 +18,7 @@ a{text-decoration:none;}
   height: 100vh;
   display: flex;
   justify-content: center;
+  min-height: 900px;
 }
 
 .joinUs .joinBox {
