--- a/src/css/productDescription.css
+++ b/src/css/productDescription.css
@@ -33,8 +33,8 @@
   background-color: #ffffff;
   height: 117px;
   width: 1322px;
+  cursor: pointer;
 }
-
 
 .productInfo .descriptionBox {
   display: block;
