user 쪽 페이지에서 checkBox가 작아지는 현상 발견. productEdit에서 선언한 checkBox가 영향을 줘 작아진 것을 확인하고 조치

--- a/src/css/productEdit.css
+++ b/src/css/productEdit.css
@@ -229,7 +229,7 @@
   margin: 20px 20px;
 }
 
-input[type="checkbox"] {
+.productEdit input[type="checkbox"] {
   zoom: 0.5;
   border-radius: 5px;
 }
