--- a/src/css/join.css
+++ b/src/css/join.css
@@ -1,19 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-ul,
-ol,
-li {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-
 .join {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -23,14 +9,14 @@ a {
 }
 
 .join .joinBoxWrapper {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .join .joinBox {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   height: 1000px;
   width: 574px;
   position: relative;
@@ -40,7 +26,7 @@ a {
   color: #000000;
   font-size: 30px;
   font-weight: 400;
-  width: 100%px;
+  width: 100%;
   text-align: center;
   padding: 20px 0;
   margin-bottom: 20px;
@@ -51,6 +37,15 @@ a {
   text-align: left;
   color: gray;
   font-size: 12px;
+}
+
+.join .inner .checkId {
+  margin: 0 20px;
+  color: blue;
+}
+.join .inner .checkId.not {
+  margin: 0 20px;
+  color: red;
 }
 
 /* .join .textWrapper::after {
@@ -75,11 +70,10 @@ a {
   height: 40px;
   text-align: left;
   width: 350px;
-  border: 1px solid #EBEBEB;
+  border: 1px solid #ebebeb;
   padding-left: 10px;
   border-radius: 4px;
 }
-
 
 .join .mobile {
   color: #000000;
@@ -88,7 +82,7 @@ a {
   height: 40px;
   text-align: left;
   width: 112px;
-  border: 1px solid #EBEBEB;
+  border: 1px solid #ebebeb;
   padding-left: 10px;
   border-radius: 4px;
 }
@@ -111,14 +105,14 @@ a {
 }
 
 .join .carrySelectBtn {
-  margin : 6px 0;
+  margin: 6px 0;
   color: white;
   font-size: 14px;
 }
 
-.join .btn-info{
+.join .btn-info {
   background-color: black;
-  border:  transparent;
+  border: transparent;
 }
 
 .join .inputRadio {
@@ -126,7 +120,7 @@ a {
   left: 110px;
   height: 46px;
   text-align: center;
-  border: 1px solid #EBEBEB;
+  border: 1px solid #ebebeb;
   border-radius: 4px;
   background-color: #ffffff;
   font-size: 15px;
