--- a/src/css/passwordEdit.css
+++ b/src/css/passwordEdit.css
@@ -3,7 +3,7 @@ ul, ol, li{list-style:none;}
 a{text-decoration:none;} 
 
 .changePassword {
-  background-color: #f6f1eb;
+  background-color: #FFFFFF;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -13,26 +13,16 @@ a{text-decoration:none;}
 }
 
 .changePassword .div {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 524px;
   position: relative;
   width: 640px;
   border-radius: 10px;
 }
 
-.changePassword .div > .textWrapper::after{
-  content: '';
-  display: block;
-  width: 540px;
-  border: 1px solid #f6f1eb;
-  position: absolute;
-  top: 60px;
-  left: 115px;
-}
 
 .changePassword .textWrapper {
-  color: #524747;
-  
+  color: black;
   font-size: 30px;
   font-weight: 400;
   height: 95px;
@@ -41,12 +31,12 @@ a{text-decoration:none;}
   position: absolute;
   text-align: center;
   top: 20px;
-  left: -70px;
+  left: 100px;
   width: 413px;
 }
 
 .changePassword .changePasswordBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 373px;
   left: 0px;
   position: absolute;
@@ -58,7 +48,7 @@ a{text-decoration:none;}
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 100px;
+  left: 90px;
   width: 80px;
   text-align: center;
   background-color: white;
@@ -73,7 +63,7 @@ a{text-decoration:none;}
   position: absolute;
   z-index: 1;
   top: 25px;
-  left: 103px;
+  left: 96px;
   width: 100px;
   text-align: center;
   background-color: white;
@@ -85,7 +75,7 @@ a{text-decoration:none;}
 }
 
 .changePassword .inputBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 178px;
   left: 110px;
   position: absolute;
@@ -94,7 +84,7 @@ a{text-decoration:none;}
 }
 
 .changePassword .inputPassword {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 90px;
   left: -70px;
   position: absolute;
@@ -104,7 +94,6 @@ a{text-decoration:none;}
 
 .changePassword .textWrapper2 {
   color: #000000;
-  
   font-size: 15px;
   font-weight: 400;
   height: 40px;
@@ -115,13 +104,19 @@ a{text-decoration:none;}
   text-align: left;
   top: 15px;
   width: 370px;
-  border: 1px solid #9d2a1e;
   padding-left: 7px;
-  border-radius: 4px;
+  border: transparent;
+  border-bottom: 1px solid #EBEBEB;
+  outline: none
+}
+
+.changePassword .textWrapper2:focus{
+  border: transparent;
+  border-bottom: 1px solid rgb(124, 124, 124);
 }
 
 .changePassword .inputPasswordCheck {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 70px;
   left: -70px;
   position: absolute;
@@ -141,14 +136,19 @@ a{text-decoration:none;}
   text-align: left;
   top: 15px;
   width: 370px;
-  border: 1px solid #9d2a1e;
   padding-left: 7px;
-  border-radius: 4px;
+  border: transparent;
+  border-bottom: 1px solid #EBEBEB;
+  outline: none
+}
+.changePassword .textWrapper3:focus{
+  border: transparent;
+  border-bottom: 1px solid rgb(124, 124, 124);
 }
 
 
 .changePassword .buttonBox {
-  background-color: #fffcf7;
+  background-color: #FFFFFF;
   height: 154px;
   left: 10px;
   position: absolute;
@@ -160,7 +160,7 @@ a{text-decoration:none;}
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   position: absolute;
   top: 28px;
@@ -176,7 +176,7 @@ a{text-decoration:none;}
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #4d4a4a;
+  background-color: black;
   height: 40px;
   left: 350px;
   position: absolute;
