--- a/src/css/button.css
+++ b/src/css/button.css
@@ -7,7 +7,7 @@
   margin-top: 50px;
 }
 
-.buttonBox > * {
+.btn1, .btn2, .btn3 {
   margin-right: 30px;
   width: 180px;
   font-size: 18px;
@@ -23,12 +23,34 @@
   border: 1px solid #0d6efd;
   color: #0d6efd;
   font-weight: 600;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.btn1:after,
+.btn2:after,
+.btn3:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -20%;
+  width: 0;
+  height: 100%;
+  background-color: #0d6efd;
+  transform: skew(50deg);
+  z-index: -1;
+  transition: .4s ease-in;
+}
+
+.btn1:hover:after,
+.btn2:hover:after,
+.btn3:hover:after {
+  width: 140%;
 }
 
 .btn1:hover,
 .btn2:hover,
 .btn3:hover {
-  background-color: #0d6efd;
   color: #fff;
-  border: none;
 }
