productReview css 정리 및 productDescription 전체적으로 정리

--- a/src/css/productDescription.css
+++ b/src/css/productDescription.css
@@ -85,6 +85,7 @@
 .productInfo .productReview {
   height: 156px;
   width: 664px;
+  cursor: pointer;
 }
 
 .productInfo .textWrapper3 {
@@ -109,6 +110,7 @@
   border-radius: 5px;
   height: 156px;
   width: 664px;
+  cursor: pointer;
 }
 
 .productInfo .textWrapper4 {
