--- a/src/css/productEdit.css
+++ b/src/css/productEdit.css
@@ -4,6 +4,7 @@
 }
 
 .productEdit .inner {
+  width: 1190px;
   display: flex;
   justify-content: center;
 }
@@ -143,17 +144,14 @@
 
 .productEdit .inner .wrap.img .boxWrap .addImg {
   padding: 2px 8px;
-  margin-left: 200px;
   border-radius: 5px;
+  margin-left : 60px;
   background-color: #d4e5ff;
   color: #0d6efd;
   font-weight: 600;
 }
 
 .productEdit .inner .wrap.img .boxWrap .addImg:hover {
-  padding: 2px 8px;
-  margin-left: 200px;
-  border-radius: 5px;
   background-color: #0d6efd;
   color: #fff;
 }
