--- a/src/css/productDescription.css
+++ b/src/css/productDescription.css
@@ -15,10 +15,12 @@
 .productInfo .infoDescription {
   height: 1163px;
   width: 1330px;
+  transform: translate(50px, 23px);
   overflow: hidden;
 }
 .productInfo .infoDescription.unhidden {
   width: 1330px;
+  min-height: 1163px;
   height: auto;
   overflow: unset;
 }
@@ -83,6 +85,7 @@
 .productInfo .productReview {
   height: 156px;
   width: 664px;
+  cursor: pointer;
 }
 
 .productInfo .textWrapper3 {
@@ -92,7 +95,7 @@
   font-weight: 400;
   letter-spacing: 0;
   vertical-align: middle;
-  line-height: 140px;
+  line-height: 155px;
   text-align: center;
 }
 
@@ -107,6 +110,7 @@
   border-radius: 5px;
   height: 156px;
   width: 664px;
+  cursor: pointer;
 }
 
 .productInfo .textWrapper4 {
@@ -114,7 +118,7 @@
   font-size: 28px;
   font-weight: 400;
   letter-spacing: 0;
-  line-height: 140px;
+  line-height: 156px;
   vertical-align: middle;
   height: 100%;
   text-align: center;
