메인 조건에 따라 다르게 볼 수 있도록 수정 중

--- a/src/main.css
+++ b/src/main.css
@@ -37,7 +37,7 @@
   right: 20px;
 }
 
-.main .inner{
+.main .inner {
   margin: 40px 0;
 }
 
@@ -51,11 +51,24 @@
   text-align: center;
 }
 
+.main .inner .div {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.main .inner .div p {
+  margin: 0 20px;
+}
+.main .inner .div p span {
+  margin: 0 10px;
+  cursor: pointer;
+}
 .main .wrap {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   overflow-x: hidden;
   padding: 20px;
   margin: 0 5px;
