main 조건에 따라 정렬하도록 변경

--- a/src/main.css
+++ b/src/main.css
@@ -58,10 +58,17 @@
 }
 
 .main .inner .div p {
-  margin: 0 20px;
+  margin: 0 10px;
+}
+
+.main .inner .div .sort {
+  margin-right: 140px;
 }
 .main .inner .div p span {
   margin: 0 10px;
+  padding: 5px;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
   cursor: pointer;
 }
 .main .wrap {
