--- a/src/css/paySuccess.css
+++ b/src/css/paySuccess.css
@@ -302,25 +302,25 @@
   top: 700px;
 }
 
-.text {
+.paySuccess .text {
   width: 100%;
   height: 80px;
   border-bottom: 3px solid #ccc;
 }
 
-.text2 {
+.paySuccess .text2 {
   width: 100%;
   height: 70px;
   border-bottom: 1px solid #ccc;
 }
 
-.text3 {
+.paySuccess .text3 {
   width: 100%;
   height: 70px;
   border-bottom: 3px solid #ccc;
 }
 
-.okImg{
+.paySuccess .okImg{
   position: absolute;
   left: 490px;
   top: -30px;
